# Paddle

cmake/: inference_lib.cmake
paddle/fluid/distributed/: CMakeLists.txt
paddle/fluid/distributed/collective/: CMakeLists.txt  NCCLUtils.cc  NCCLUtils.h  ProcessGroup.cc  ProcessGroup.h  ProcessGroupNCCL.cc  ProcessGroupNCCL.h  Types.h  cuda_tensor_ipc.cc  cuda_tensor_ipc.h  reducer.cc  reducer.h
paddle/fluid/distributed/fleet_executor/: task_node.cc
paddle/fluid/framework/: data_set.cc  distributed_strategy.proto  operator.cc  scope_utils.h
paddle/fluid/imperative/: CMakeLists.txt
paddle/fluid/imperative/distributed/: CMakeLists.txt  NCCLUtils.cc  NCCLUtils.h  ProcessGroup.cc  ProcessGroup.h  ProcessGroupNCCL.cc  ProcessGroupNCCL.h  Types.h
paddle/fluid/operators/: custom_all_reduce.h  layer_norm_op.cu  rank_attention_op.cc  rank_attention_op.cu
paddle/fluid/operators/collective/: c_allreduce_op.h  c_embedding_op.cu  c_sync_calc_stream_op.cc  c_sync_comm_stream_op.cc  c_wait_comm_op.cc  c_wait_compute_op.cc  global_gather_op.cc  global_gather_op.cu.cc  global_scatter_op.cc  global_scatter_op.cu.cc
paddle/fluid/operators/fused/: fused_gemm_epilogue_op.cu  fused_gemm_epilogue_op.h  (+1 more)
paddle/fluid/platform/: device_context.cc  device_context.h  event.h
paddle/fluid/pybind/: CMakeLists.txt  auto_parallel_py.cc  distributed_py.cc  distributed_py.h  pybind.cc
paddle/phi/: nvtx_guard.h
paddle/phi/core/: device_context.cc  flags.cc
python/paddle/distributed/: collective.py  utils.py
python/paddle/fluid/: dataset.py  framework.py
(+39 files in other folders)
